可以连接数据库（路径暂时需要自己配置），解决显示中文乱码问题