@@ -1,8 +1,9 @@
-package org.example.codepart.Service;
+package org.example.code.Service;
 
 import org.springframework.stereotype.Service;
 
 import java.io.BufferedReader;
+import java.io.File;
 import java.io.InputStreamReader;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
@@ -13,27 +14,14 @@ import java.util.regex.Pattern;
 @Service
 public class CodeExecutionService {
 
-    static {
-        // 尝试加载 MySQL JDBC 驱动
-        try {
-            Class.forName("com.mysql.cj.jdbc.Driver");
-        } catch (ClassNotFoundException e) {
-            e.printStackTrace();
-        }
-    }
-
     public String executeCode(String code, String language) {
         try {
-            switch (language.toLowerCase()) {
-                case "python":
-                    return executePython(code);
-                case "java":
-                    return executeJava(code);
-                case "cpp":
-                    return executeCpp(code);
-                default:
-                    return "Unsupported language";
-            }
+            return switch (language.toLowerCase()) {
+                case "python" -> executePython(code);
+                case "java" -> executeJava(code);
+                case "cpp" -> executeCpp(code);
+                default -> "Unsupported language";
+            };
         } catch (Exception e) {
             return "Error executing code: " + e.getMessage();
         }
@@ -41,13 +29,13 @@ public class CodeExecutionService {
 
     private String executePython(String code) throws Exception {
         Path tempScript = Files.createTempFile("python_code_", ".py");
-        Files.write(tempScript, code.getBytes(StandardCharsets.UTF_8));
+        Files.writeString(tempScript, code);
         ProcessBuilder pb = new ProcessBuilder("python", tempScript.toString());
         return runProcess(pb);
     }
 
     private String executeJava(String code) throws Exception {
-        Pattern pattern = Pattern.compile("public\\s+class\\s+([\\w]+)\\s*");
+        Pattern pattern = Pattern.compile("public\\s+class\\s+(\\w+)\\s*");
         Matcher matcher = pattern.matcher(code);
         String className = "Main";
         if (matcher.find()) {
@@ -56,7 +44,7 @@ public class CodeExecutionService {
 
         Path tempScript = Files.createTempFile(className, ".java");
         Path sourceFile = tempScript.resolveSibling(className + ".java");
-        Files.write(sourceFile, code.getBytes(StandardCharsets.UTF_8));
+        Files.writeString(sourceFile, code);
 
         System.out.println("Compiling Java source file: " + sourceFile);
         ProcessBuilder compilePB = new ProcessBuilder("javac", "-encoding", "UTF-8", sourceFile.toString());
@@ -66,14 +54,15 @@ public class CodeExecutionService {
         }
 
         System.out.println("Running Java class: " + className);
-        String classpath = sourceFile.getParent().toString() + System.getProperty("path.separator") + "path/to/mysql-connector-java.jar";
-        ProcessBuilder runPB = new ProcessBuilder("java", "-cp", classpath, className);
+        String classpath = sourceFile.getParent().toString() + File.pathSeparator + "F:\\SoftwareEngineering\\CourseDesign\\MCDCTest\\target\\lib\\mysql-connector-j-8.0.32.jar";
+        System.out.println("classpath： " + classpath);
+        ProcessBuilder runPB = new ProcessBuilder("java", "-Dfile.encoding=UTF-8", "-cp", classpath, className);
         return runProcess(runPB);
     }
 
     private String executeCpp(String code) throws Exception {
         Path tempScript = Files.createTempFile("cpp_code_", ".cpp");
-        Files.write(tempScript, code.getBytes(StandardCharsets.UTF_8));
+        Files.writeString(tempScript, code);
         String executableName = tempScript.toString().replace(".cpp", "");
         ProcessBuilder compilePB = new ProcessBuilder("g++", "-finput-charset=UTF-8", tempScript.toString(), "-o", executableName);
         String compileOutput = runProcess(compilePB);
